environments/dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: 139080726045.dkr.ecr.us-east-1.amazonaws.com/gitops:c8f2347ed216383971f9380957a03c115c1ce6e9
