environments/dev/replicaCount.yaml

---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: todo
  spec:
    replicas: 4
